project show page style complete

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -44,3 +44,14 @@
   }
 
 }
+// project show(collaborator)
+.btn-s-blue-white {
+  background: $m-blue;
+  color: white;
+  text-decoration: none;
+  &:hover {
+    color: $m-bluelight;
+    text-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    text-decoration: none;
+  }
+}//
