--- a/app/assets/stylesheets/components/_card-case.scss
+++ b/app/assets/stylesheets/components/_card-case.scss
@@ -17,6 +17,7 @@ ul{
   border-radius: 16px;
   position: relative;
   border-left: 25px solid #3734AA;
+  box-shadow: 1px 2px 6px rgba(0,0,0,0.2);
   background-color: white;
   text-decoration: none;
     &:hover{
