--- a/app/assets/stylesheets/pages/_case.scss
+++ b/app/assets/stylesheets/pages/_case.scss
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
-
+// case show + project show
 .global-text{
   column-count: 2;
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   font-weight: 400;
 }
-
+//
 .title{
   font-family: 'Montserrat', sans-serif;
   font-size: 20px;
