--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,10 +8,11 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 
+//Bootstrap color
+$light-gray: #F4F4F4;
 
 // Our colors
 $m-blue-dark: #061433;
->>>>>>> master
 $m-blue: #3734AA;
 $m-bluelight: #38E1ED;
 $m-blue-grey-light: #E8F2FF;
@@ -19,7 +20,6 @@ $m-grey: #F6F9FF;
 $m-grey-light: #E5E5E5;
 
 
-// $gray-light: #F4F4F4;
 
 
 
