--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,3 +1,20 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "project-show";
+
+
+html, body {
+  padding: 0;
+  margin: 0;
+  // height: 100%;
+  // overflow: hidden;
+  font-family: 'Montserrat', sans-serif;
+}
+
+#main-body-content {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  min-height: 80vh;
+  max-height: fit-content;
+}
