--- a/app/assets/stylesheets/pages/_project-show.scss
+++ b/app/assets/stylesheets/pages/_project-show.scss
@@ -1,26 +1,41 @@
-.display-file {
+.display-project-detail {
   padding-left: 0;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1.25fr 2fr;
   grid-template-rows: 1fr;
-  grid-gap: 16px;
+  grid-gap: 30px;
   grid-template-areas:
-    "case comment comment";
+    "case comment";
 }
-.case { grid-area: case; }
-.comment { grid-area: comment; }
+.comment {
+  grid-area: comment;
+  max-height: 850px;
+  overflow-y: auto;
+}
 
-.cards-project{
+.project-body, .project-bottom {
+  background: white;
+}
+
+
+// case
+.case {
+  grid-area: case;
+}
+
+.cards-project {
   padding-left: 0;
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 16px;
+  max-height: 800px;
+  overflow-y: auto;
 }
 
-.description {
-  column-count: 2;
+// description
+.project-description {
+  background: #f8f8f8;
 }
-
 .user-info {
   display: flex;
 }
@@ -38,16 +53,55 @@
   font-size: 12px;
   color:grey;
 }
-
-.collaborator {
+//
+// collaborator
+.project-collaborator {
   background: $m-blue;
   color: white;
   font-family: "Montserrat";
   font-size: 20px;
   font-weight: bold;
 }
+
 .collaborator-list {
   column-count: 3;
   font-size: 16px;
   font-weight: normal;
+  ul {
+    padding-left: 0;
+  }
+  li {
+    padding-left: 80px;
+  }
+}
+
+.text-p-white {
+  a {
+    text-decoration: none;
+    color: white;
+  }
+}
+//
+
+//project-bottom
+.project-bottom-display {
+  // border: 1px solid red;
+  display: grid;
+  grid-template-columns: 1.25fr 2fr;
+  grid-template-rows: 1fr;
+  grid-gap: 30px;
+  grid-template-areas:
+    "link input";
+}
+.case-link {
+  // border: 1px solid blue;
+  grid-area: link;
+  select {
+    border-radius: 8px;
+    // width: 50%;
+  }
+}
+.comment-input {
+  grid-area: input;
+  // border: 1px solid green;
 }
