--- a/app/views/users/_collaboration_card.html.erb
+++ b/app/views/users/_collaboration_card.html.erb
@@ -1,16 +1,21 @@
 <div>
   <ul id ="project-container">
     <% @user.my_collaborations.each do |collaboration| %>
-    <li >
+      <li >
         <div class="card-project">
-          <div class="card-main-infos">
             <div class="card-project-top-infos">
               <p><strong><%= collaboration.project.links.count %></strong> cases</p>
               <p><strong><%= collaboration.project.collaborations.count %></strong> collaborators</p>
             </div>
-            <h2><%= link_to collaboration.project.name, project_path(collaboration.project) %></h2>
+          <div class="card-main-infos">
+            <h2><%= collaboration.project.name %></h2>
             <p><%= collaboration.project.description %></p>
-            <span>PROJECT</span>
+          </div>
+          <div class="card-project-bottom-infos">
+            <span><strong>PROJECT</strong></span>
+            <div>
+              <%= link_to "Read more ￫",project_path(collaboration.project) %>
+            </div>
           </div>
         </div>
       </li>
