Patient cards created

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -7,6 +7,7 @@
 @import "button";
 @import "card-case";
 @import "card-project";
+@import "card-patient";
 @import "accordion";
 @import "utilities";
 @import "doctor-infos";
