--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
 
 
   <hr>
-  <div class="">
+  <div class="nav-fill">
 
     <ul class="nav nav-tabs" id="myTab" role="tablist">
       <li class="nav-item">
