work in progress

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,7 +9,7 @@ $green: #1EDD88;
 $gray: #0E0000;
 
 //Bootstrap color
-$light-gray: #F4F4F4;
+$light-gray: #F6F9FF;
 
 // Our colors
 $m-blue-dark: #061433;
