Patient card done.

--- a/app/assets/stylesheets/components/_card-case.scss
+++ b/app/assets/stylesheets/components/_card-case.scss
@@ -7,7 +7,7 @@ ul{
 .cards-container{
   padding-left: 0;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
 }
 
