--- a/app/views/users/_creation_menu.html.erb
+++ b/app/views/users/_creation_menu.html.erb
@@ -1,7 +1,7 @@
 <div class="row row-customized">
   <div class="col col-customized">
     <%= link_to new_case_path, class:"d-flex text-dark" do %>
-      <div><img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615306185/project-icon_dclyb9.png" alt="" style="width: 50px"></div>
+      <div><img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615306185/project-icon_dclyb9.png" alt="" style="width: 51px"></div>
       <div class="px-2">
         <p class="h5">+ patient</p>
         <p class="mb-0 text-muted small">Track visits to your sites</p>
@@ -9,8 +9,8 @@
     <% end %>
   </div>
   <div class="col col-customized">
-    <%= link_to new_case_path, class:"d-flex text-dark" do %>
-      <div><img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615306259/patient-icon_vx0jp6.png" alt="" style="width: 50px"></div>
+    <%= link_to new_case_path, class:"d-flex justify-content-center text-dark" do %>
+      <div><img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615306259/patient-icon_vx0jp6.png" alt="" style="width: 55px"></div>
       <div class="px-2">
         <p class="h5">+ case</p>
         <p class="mb-0 text-muted small">Track your apps across devices</p>
@@ -18,8 +18,8 @@
     <% end %>
   </div>
   <div class="col col-customized">
-    <%= link_to new_project_path, class:"d-flex text-dark" do %>
-      <div><img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615306185/case-icon_jh1vbt.png" alt="" style="width: 50px"></div>
+    <%= link_to new_project_path, class:"d-flex justify-content-end text-dark" do %>
+      <div><img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615306185/case-icon_jh1vbt.png" alt="" style="width: 54px"></div>
       <div class="px-2">
         <p class="h5">+ project</p>
         <p class="mb-0 text-muted small">View your results as Excel file</p>
