--- a/app/assets/stylesheets/components/_card-patient.scss
+++ b/app/assets/stylesheets/components/_card-patient.scss
@@ -1,6 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
+
+ul{
+  list-style-type: none;
+}
+
+.cards-container{
+  padding-left: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+}
+
 .card-patient{
   height: 135px;
-  width: 385px;
+  min-width: 300px;
+  max-height: 385px;
   border-radius: 16px;
   position: relative;
   border-left: 25px solid $m-blue-dark;
@@ -84,7 +98,7 @@
 .card-patient-bottom-infos{
   display: flex;
   justify-content: space-between;
-    width: 350px;
+    width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   position: absolute;
