--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,8 +1,8 @@
 // homepage(banner)
 .banner-home {
-  height: 80vh;
+  height: 90vh;
   background-size: cover;
-  background-position: center;
+  background-position: 50% 15%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,10 +12,11 @@
 // homepage(title)
 .banner-title {
   color: white;
-  font-family: 'Montserrat', sans-serif;
   h1 {
+    font-family: 'Montserrat', sans-serif;
     font-size: 60px;
     margin-bottom: 60px;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   }
 }
 //
