--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,25 +26,31 @@
     <div class="w-50">
       <%= cl_image_tag("https://res.cloudinary.com/dpt0tj9je/image/upload/v1615221922/pexels-pixabay-40568_mwrsbw.jpg", :width => 555, :height => 350, :crop => :fill, :class => "w-100 object-fit") %>
     </div>
-    <div class="about-text px-5 w-50">
-      <h2><strong>ABOUT US</strong></h2>
-      <p><i class="fas fa-user-md mr-2"></i> Community of licensed doctors.</p>
-      <p><i class="far fa-address-card mr-1"></i> Anonymous patient cases.</p>
-      <p class = "text-justify">Everyday, there are countless patients who suffer from rare diseases. One doctor couldn’t find a solution, the community would offer the help.</p>
-      <p>Face the unknown, connect the wise minds.</p>
+    <div class=" d-flex flex-column w-50">
+      <div class="about-text px-5 flex-grow-1">
+        <h2><strong>ABOUT US</strong></h2>
+        <p><i class="fas fa-user-md mr-2"></i> Community of licensed doctors.</p>
+        <p><i class="far fa-address-card mr-1"></i> Anonymous patient cases.</p>
+        <p class = "text-justify">Everyday, there are countless patients who suffer from rare diseases. One doctor couldn’t find a solution, the community would offer the help.</p>
+        <p>Face the unknown, connect the wise minds.</p>
+      </div>
+      <div style="height: 50px; background-color: #F8F8F8"></div>
     </div>
-    <hr>
   </div>
+
   <div class="d-flex justify-content-center mb-3">
-    <div class="mission-text px-5 w-50">
-      <h2><strong>OUR MISSION</strong></h2>
-      <p><i class="fas fa-user-md mr-2"></i> Community of licensed doctors.</p>
-      <p><i class="far fa-address-card mr-1"></i> Anonymous patient cases.</p>
-      <p class = "text-justify">Everyday, there are countless patients who suffer from rare diseases. One doctor couldn’t find a solution, the community would offer the help.</p>
-      <p>Face the unknown, connect the wise minds.</p>
+    <div class="d-flex flex-column w-50">
+      <div class="mission-text px-5 flex-grow-1">
+        <h2><strong>OUR MISSION</strong></h2>
+        <p><i class="fas fa-user-md mr-2"></i> Community of licensed doctors.</p>
+        <p><i class="far fa-address-card mr-1"></i> Anonymous patient cases.</p>
+        <p class = "text-justify">Everyday, there are countless patients who suffer from rare diseases. One doctor couldn’t find a solution, the community would offer the help.</p>
+        <p>Face the unknown, connect the wise minds.</p>
+      </div>
+      <div style="height: 50px; background-color: #F8F8F8"></div>
     </div>
+
     <div class="w-50">
       <%= cl_image_tag("https://res.cloudinary.com/dpt0tj9je/image/upload/v1615221923/pexels-tima-miroshnichenko-5452223_r2xk49.jpg", :width => 555, :height => 350, :crop => :fill, :class => "w-100 object-fit") %>
     </div>
-    <hr>
   </div>
