--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-between my-3">
     <h1>Projects</h1>
     <div>
-      <%= form_tag projects_path, method: :get, class: "d-flex justify-content-center" do %>
+      <%= form_tag projects_path, method: :get, class: "d-flex justify-content-center my-3" do %>
         <%= button_tag :submit, class: "btn btn-search-index" do %>
           <i class="fas fa-search"></i>
         <% end %>
