--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,20 +22,20 @@
 </div>
 
 <div class="container-auto">
-  <div class="block-top d-flex justify-content-center">
-    <div class="left-bloc w-50" style="background-image: url(<%= cl_image_path("homePage-diagram_tmkho2") %>);">
-    </div>
+  <div class="d-flex justify-content-center">
+    <div class="top-left-bloc w-50" style="background-image: url(<%= cl_image_path("homePage-diagram_tmkho2") %>);">
+  </div>
     <div class=" d-flex flex-column w-50">
       <div class="d-flex flex-grow-1">
-        <div class="blue-bloc px-5">
+        <div class="top-right-bloc px-5">
           <h2><strong>ABOUT US</strong></h2>
           <p>Community of licensed doctors.</p>
         </div>
-        <div class="blue-bloc px-5">
+        <div class="top-right-bloc px-5">
           <h2><strong>ABOUT US</strong></h2>
           <p>Community of licensed doctors.</p>
         </div>
-        <div class="blue-bloc px-5">
+        <div class="top-right-bloc px-5">
           <h2><strong>ABOUT US</strong></h2>
           <p>Community of licensed doctors.</p>
         </div>
@@ -44,24 +44,27 @@
   </div>
 
   <div class="d-flex justify-content-center mb-3">
-    <div class="d-flex w-50 dark-blue-bloc">
+    <div class="d-flex w-50 bottom-left-bloc">
       <div class="d-flex justify-content-center">
-        <div class="px-5">
+        <div class="px-5 border-top border-dark pt-3">
           <h2>+7K</h2>
           <p>users</p>
         </div>
-        <div class="px-5">
+        <div class="px-5 border-top border-dark pt-3">
           <h2>+25K</h2>
           <p>cases</p>
         </div>
-        <div class="px-5">
+        <div class="px-5 border-top border-dark pt-3">
           <h2>+15K</h2>
           <p>projects</p>
         </div>
       </div>
     </div>
 
-    <div class="w-50">
-      <%= cl_image_tag("https://res.cloudinary.com/dpt0tj9je/image/upload/v1615221923/pexels-tima-miroshnichenko-5452223_r2xk49.jpg", :width => 555, :height => 350, :crop => :fill, :class => "w-100 object-fit") %>
+    <div class=" d-flex flex-column justify-content-center align-items-center w-50 bottom-right-bloc ">
+      <div class="w-50 bottom-right-bloc" style="background-image: url(<%= cl_image_path("homePage-diagram-84_zsgja2") %>);"></div>
+      <div>
+        <p class="col-md-8 mb-5" style="color: white">84% des utilisateurs de <strong>Bloom</strong> ont affirmés avoir reçu une aide précieuse de la part de collaborateurs contribuant à la résolution de certains de leurs cas.</p>
+      </div>
     </div>
   </div>
