--- a/app/assets/stylesheets/components/_create-case-form.scss
+++ b/app/assets/stylesheets/components/_create-case-form.scss
@@ -13,17 +13,16 @@
 }
 
 .radio1 {
-    display: inline-block;
-    background-color: #393DA4;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    color: white;
-    padding: 10px 20px;
-    font-family: sans-serif, Arial;
-    font-size: 16px;
     border-radius: 20px;
-    &:hover {
+  border: 1px solid $m-blue;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  opacity: 1;
+  padding: 6px 12px;
+  color: $m-blue;
+  text-decoration: none;
+  &:hover {
     box-shadow: 0px 0px 10px rgba(56,225,237,0.7);
-    color: white;
+    color: $m-blue;
     text-shadow: 0 2px 4px rgba(0,0,0,0.2);
     text-decoration: none;
   }
