--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,18 +26,18 @@
     <div class="top-left-bloc w-50" style="background-image: url(<%= cl_image_path("homePage-diagram_tmkho2") %>);">
   </div>
     <div class=" d-flex flex-column w-50">
-      <div class="d-flex flex-grow-1">
-        <div class="top-right-bloc px-5">
-          <h2><strong>ABOUT US</strong></h2>
-          <p>Community of licensed doctors.</p>
+      <div class="d-flex flex-grow-1 top-right-bloc">
+        <div class="px-5 col-md-4">
+          <h2>SEEK FOR HELP </h2>
+          <p>Having patients with rare diseases?</p>
         </div>
-        <div class="top-right-bloc px-5">
-          <h2><strong>ABOUT US</strong></h2>
-          <p>Community of licensed doctors.</p>
+        <div class="px-5 col-md-4">
+          <h2>BUILD A CASE</h2>
+          <p>Gather informations and connect with doctors.</p>
         </div>
-        <div class="top-right-bloc px-5">
-          <h2><strong>ABOUT US</strong></h2>
-          <p>Community of licensed doctors.</p>
+        <div class="px-5 col-md-4">
+          <h2>SHARE</h2>
+          <p>Join forces and find solutions together</p>
         </div>
       </div>
     </div>
@@ -46,15 +46,15 @@
   <div class="d-flex justify-content-center mb-3">
     <div class="d-flex w-50 bottom-left-bloc">
       <div class="d-flex justify-content-center">
-        <div class="px-5 border-top border-dark pt-3">
+        <div class="px-5 border-top border-dark pt-5">
           <h2>+7K</h2>
           <p>users</p>
         </div>
-        <div class="px-5 border-top border-dark pt-3">
+        <div class="px-5 border-top border-dark pt-5">
           <h2>+25K</h2>
           <p>cases</p>
         </div>
-        <div class="px-5 border-top border-dark pt-3">
+        <div class="px-5 border-top border-dark pt-5">
           <h2>+15K</h2>
           <p>projects</p>
         </div>
@@ -64,7 +64,7 @@
     <div class=" d-flex flex-column justify-content-center align-items-center w-50 bottom-right-bloc ">
       <div class="w-50 bottom-right-bloc" style="background-image: url(<%= cl_image_path("homePage-diagram-84_zsgja2") %>);"></div>
       <div>
-        <p class="col-md-8 mb-5" style="color: white">84% des utilisateurs de <strong>Bloom</strong> ont affirmés avoir reçu une aide précieuse de la part de collaborateurs contribuant à la résolution de certains de leurs cas.</p>
+        <p class="col-md-8 mb-4" style="color: white">84% des utilisateurs de <strong>Bloom</strong> ont affirmés avoir reçu une aide précieuse de la part de collaborateurs contribuant à la résolution de certains de leurs cas.</p>
       </div>
     </div>
   </div>
