--- a/app/views/users/_case_card.html.erb
+++ b/app/views/users/_case_card.html.erb
@@ -1,5 +1,5 @@
-<div mb-5>
-  <ul class="cards-container">
+<div>
+  <ul class="cards-container pt-2 pb-3">
     <% @user.cases.each do |c| %>
       <li class="card-case">
         <div class="card-doctor-email">
