--- a/app/views/users/_collaboration_card.html.erb
+++ b/app/views/users/_collaboration_card.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <ul id ="project-container">
+  <ul class="project-container pt-2 pb-3">
     <% @user.my_collaborations.each do |collaboration| %>
       <li >
         <div class="card-project">
