--- a/app/views/users/_patients_card.html.erb
+++ b/app/views/users/_patients_card.html.erb
@@ -1,4 +1,4 @@
-<ul class="cards-container">
+<ul class="cards-container pt-2 pb-3">
   <% @user.patients.each do |patient| %>
     <li class="card-patient">
       <div class="card-patient-top-infos">
