--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,26 +37,24 @@
         </div>
         <div class="px-5 col-md-4">
           <h2>SHARE</h2>
-          <p>Join forces and find solutions together</p>
+          <p>Join forces and find solutions together.</p>
         </div>
       </div>
     </div>
   </div>
 
   <div class="d-flex justify-content-center mb-3">
-    <div class="d-flex w-50 bottom-left-bloc">
+    <div class="d-flex flex-column align-items-center w-50 bottom-left-bloc">
+      <p id="welcome">WELCOME TO BLOOM'S COMMUNITY</p>
       <div class="d-flex justify-content-center">
         <div class="px-5 border-top border-dark pt-5">
-          <h2>+7K</h2>
-          <p>users</p>
+          <p class="h2 mb-0">+7K <br><span class="h3">users</span></p>
         </div>
         <div class="px-5 border-top border-dark pt-5">
-          <h2>+25K</h2>
-          <p>cases</p>
+          <p class="h2 mb-0">+25K <br><span class="h3">cases</span></p>
         </div>
         <div class="px-5 border-top border-dark pt-5">
-          <h2>+15K</h2>
-          <p>projects</p>
+           <p class="h2 mb-0">+50K <br><span class="h3">projects</span></p>
         </div>
       </div>
     </div>
@@ -64,7 +62,7 @@
     <div class=" d-flex flex-column justify-content-center align-items-center w-50 bottom-right-bloc ">
       <div class="w-50 bottom-right-bloc" style="background-image: url(<%= cl_image_path("homePage-diagram-84_zsgja2") %>);"></div>
       <div>
-        <p class="col-md-8 mb-4" style="color: white">84% des utilisateurs de <strong>Bloom</strong> ont affirmés avoir reçu une aide précieuse de la part de collaborateurs contribuant à la résolution de certains de leurs cas.</p>
+        <p class="col-md-8 mb-5" style="color: white">84% of <strong>Bloom</strong> users said that they received a precious help from collaborators contributing to the resolution of some of their cases.</p>
       </div>
     </div>
   </div>
