Banner created in the project index, +project button added. Tabs color changed in the profile page.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
   <hr>
   <div class="nav-fill">
 
-    <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <ul class="nav custom nav-tabs border-0" id="myTab" role="tablist">
       <li class="nav-item">
         <a class="nav-link" id="patients-tab" data-toggle="tab" href="#patients" role="tab" aria-controls="patients" aria-selected="false">My patients</a>
       </li>
