--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,15 @@
+<div class="small-banner" style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)), url('<%= cl_image_path "0fcraugfiqoxcks1c64ikr5mrukw", crop: :fill %>')">
+  <div class="container">
+    <div>
+      <div class="small-banner-text col-md-8">
+        <h2>PROJECT</h2>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class ="container">
-  <div class="d-flex justify-content-between my-3">
+  <div class="d-flex align-items-center justify-content-between my-3">
     <h1>Projects</h1>
     <div>
       <%= form_tag projects_path, method: :get, class: "d-flex justify-content-center my-3" do %>
@@ -13,6 +23,7 @@
         %>
       <% end %>
     </div>
+    <%= link_to "+ project", new_project_path, class: "btn-s-blue mb-2" %>
   </div>
   <ul id ="project-container">
     <% @projects.each do |project| %>
